--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/png" href="media/Logo.png" />
+    <meta property="og:title" content="Anka Holding Yapım Aşamasında" />
+    <meta
+      property="og:description"
+      content="Anka Holding şu anda yapım aşamasındadır. Güncellemeler için bizi takip edin!"
+    />
+    <meta property="og:image" content="path_to_your_image.png" />
+    <meta property="og:url" content="http://ankaholding.org/" />
+    <meta property="og:site_name" content="Anka Holding" />
+    <meta name="twitter:image:alt" content="Anka Holding Logo" />
   </head>
   <body class="flex items-center justify-center h-screen bg-gray-100">
     <div class="background-image"></div>
