--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       property="og:description"
       content="Anka Holding şu anda yapım aşamasındadır. Güncellemeler için bizi takip edin!"
     />
-    <meta property="og:image" content="path_to_your_image.png" />
+    <meta property="og:image" content="media/Logo.png" />
     <meta property="og:url" content="http://ankaholding.org/" />
     <meta property="og:site_name" content="Anka Holding" />
     <meta name="twitter:image:alt" content="Anka Holding Logo" />
